tests/errmsgs/t23060.nim
discard """
  errormsg: "undeclared identifier: '♔♕♖♗♘♙'"
"""

♔♕♖♗♘♙ = 1